# egile-mcp-client

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CI_SETUP.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  README.md  config.example.yaml  debug_mcp_connection.py  pyproject.toml  simple_mcp_server.py  sonar-project.properties  test_client.py  test_config.py  test_xai_models.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  publish.yml  quality.yml  release.yml
docs/: Makefile  README.md  api.rst  architecture.md  changelog.md  conf.py  configuration.md  contributing.md  development.md  github-pages-troubleshooting.md  index.rst  installation.md  pypi-publishing.md  quickstart.md  requirements.txt  troubleshooting.md  usage.md
egile_mcp_client/: __init__.py  cli.py  config.py
egile_mcp_client/agents/: anthropic_agent.py  base.py  openai_agent.py  xai_agent.py
egile_mcp_client/mcp/: client.py  connection.py  protocol.py
egile_mcp_client/utils/: history.py
egile_mcp_client/web/: app.py  routes.py
egile_mcp_client/web/templates/: index.html
tests/: conftest.py  test_ai_agents.py  test_basic.py  test_config_loading.py  test_mcp_client.py
